Resolves: tdf#105410 do not crash on a deleted format

... if the last condition was deleted and the Manage list is to be
updated. The format is gone.

Change-Id: I0fc056b5c75849197f351871b0d05e5015d0d1bf